--- a/symbolic_solutions/barrier_symbolic_solution.ipynb
+++ b/symbolic_solutions/barrier_symbolic_solution.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 294,
    "id": "86fe31e1-b304-4cd7-8181-f2cb95376b29",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 295,
    "id": "78343f1b-c1f1-42ca-a0da-4d4aa0806c4e",
    "metadata": {},
    "outputs": [],
@@ -283,20 +283,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 322,
    "id": "b9cf5994-7014-405f-9e00-4b1dbf0738c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\log{\\left(1 + \\frac{rl}{\\mu \\left(rl - 1\\right)} \\right)}$"
+       "$\\displaystyle \\log{\\left(\\frac{l \\left(rl - 1\\right)}{\\mu} + 1 \\right)}$"
       ],
       "text/plain": [
-       "log(1 + rl/(mu*(rl - 1)))"
+       "log(l*(rl - 1)/mu + 1)"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,9 @@
     "dt_simplified = sp.exp(dt_simplified.subs({'rl':rl,'rmu':rmu}))\n",
     "dt_simplified = dt_simplified.subs(rmu, r_fun.subs(x,mu))._sage_().canonicalize_radical().simplify()._sympy_()\n",
     "dt_simplified = (dt_simplified-1).simplify()+1\n",
-    "dt_simplified = sp.log(dt_simplified)\n",
+    "dt_simplified = sp.log(dt_simplified).subs('rl',rl)\n",
+    "#finally, using that rl = l*(rl-1)^2\n",
+    "dt_simplified = dt_simplified.subs(rl/(rl-1),l*(rl-1))\n",
     "dt_simplified"
    ]
   }
