--- a/symbolic_solutions/barrier_symbolic_solution.ipynb
+++ b/symbolic_solutions/barrier_symbolic_solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "d3d84fd4-1e24-4d0e-84df-555c19fce265",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 2,
    "id": "fa75df50-2575-4ae5-969e-c4eab6d31817",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 3,
    "id": "e50f8f5e-acd7-4d36-a175-a16f18d9b964",
    "metadata": {
     "scrolled": true
@@ -152,20 +152,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 4,
    "id": "1cee6603-95ca-401d-b787-8b4474b92181",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{bs \\left(\\frac{rl^{2} \\left(\\frac{rl^{2}}{rl^{2} - 2 rl + 1}\\right)^{k} \\left(rl - 1\\right)}{\\left(rl + 1\\right) \\left(rl^{2} - 2 rl + 1\\right)} + \\frac{\\left(- \\frac{rl}{rl + 1} + \\frac{1}{rl + 1}\\right) \\left(\\frac{1}{rl^{2} - 2 rl + 1}\\right)^{k}}{rl^{2} - 2 rl + 1}\\right) - \\frac{rl^{2} \\left(\\frac{rl^{2}}{rl^{2} - 2 rl + 1}\\right)^{k}}{\\left(rl^{2} - 1\\right) \\left(rl^{2} - 2 rl + 1\\right)} + \\frac{rl^{2} \\left(\\frac{1}{rl^{2} - 2 rl + 1}\\right)^{k}}{\\left(rl^{2} - 1\\right) \\left(rl^{2} - 2 rl + 1\\right)}}{bs \\left(\\frac{\\left(\\frac{rl^{2}}{rl^{2} - 2 rl + 1}\\right)^{k} \\left(rl - 1\\right)}{rl + 1} + \\left(- \\frac{rl}{rl + 1} + \\frac{1}{rl + 1}\\right) \\left(\\frac{1}{rl^{2} - 2 rl + 1}\\right)^{k}\\right) + \\frac{rl^{2} \\left(\\frac{1}{rl^{2} - 2 rl + 1}\\right)^{k}}{rl^{2} - 1} - \\frac{\\left(\\frac{rl^{2}}{rl^{2} - 2 rl + 1}\\right)^{k}}{rl^{2} - 1}}$"
+       "$\\displaystyle \\frac{\\left(rl^{2} - 1\\right) \\left(bs rl^{2} - 2 bs rl - bs rl^{2 k + 2} + 2 bs rl^{2 k + 3} - bs rl^{2 k + 4} + bs - rl^{2} + rl^{2 k + 2}\\right)}{\\left(rl^{4} - 2 rl^{3} + 2 rl - 1\\right) \\left(bs rl^{2} - 2 bs rl - bs rl^{2 k} + 2 bs rl^{2 k + 1} - bs rl^{2 k + 2} + bs - rl^{2} + rl^{2 k}\\right)}$"
       ],
       "text/plain": [
-       "(bs*(rl**2*(rl**2/(rl**2 - 2*rl + 1))**k*(rl - 1)/((rl + 1)*(rl**2 - 2*rl + 1)) + (-rl/(rl + 1) + 1/(rl + 1))*(1/(rl**2 - 2*rl + 1))**k/(rl**2 - 2*rl + 1)) - rl**2*(rl**2/(rl**2 - 2*rl + 1))**k/((rl**2 - 1)*(rl**2 - 2*rl + 1)) + rl**2*(1/(rl**2 - 2*rl + 1))**k/((rl**2 - 1)*(rl**2 - 2*rl + 1)))/(bs*((rl**2/(rl**2 - 2*rl + 1))**k*(rl - 1)/(rl + 1) + (-rl/(rl + 1) + 1/(rl + 1))*(1/(rl**2 - 2*rl + 1))**k) + rl**2*(1/(rl**2 - 2*rl + 1))**k/(rl**2 - 1) - (rl**2/(rl**2 - 2*rl + 1))**k/(rl**2 - 1))"
+       "(rl**2 - 1)*(bs*rl**2 - 2*bs*rl - bs*rl**(2*k + 2) + 2*bs*rl**(2*k + 3) - bs*rl**(2*k + 4) + bs - rl**2 + rl**(2*k + 2))/((rl**4 - 2*rl**3 + 2*rl - 1)*(bs*rl**2 - 2*bs*rl - bs*rl**(2*k) + 2*bs*rl**(2*k + 1) - bs*rl**(2*k + 2) + bs - rl**2 + rl**(2*k)))"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,10 +178,10 @@
     "Pinv = P.inv()\n",
     "\n",
     "Bsteps_mat = (P * (D**k) * Pinv)*sp.Matrix([[bstart], [1]])\n",
-    "Bsteps_mat[0] = Bsteps_mat[0]#.simplify()\n",
-    "Bsteps_mat[1] = Bsteps_mat[1]#.simplify()\n",
+    "Bsteps_mat[0] = Bsteps_mat[0].simplify()\n",
+    "Bsteps_mat[1] = Bsteps_mat[1].simplify()\n",
     "\n",
-    "Bsteps = (Bsteps_mat[0]/Bsteps_mat[1])#.simplify()\n",
+    "Bsteps = (Bsteps_mat[0]/Bsteps_mat[1]).simplify()\n",
     "Bsteps"
    ]
   },
@@ -195,15 +195,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 5,
    "id": "53a64f9b-272d-4810-9967-be0397e730ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Bx1 = (l_inv.subs(x,rl)*rl)#.simplify()\n",
-    "Bx0 = ((1 + W.subs(x,0)+ W.subs(x,1) - W.subs(x,1)**2/Bx1))#.simplify()\n",
-    "Bxm1 =  ((1 + W.subs(x,-1)+ W.subs(x,0) - W.subs(x,0)**2/Bx0))#.simplify()\n",
-    "B_bwd_steps = Bsteps.replace(k,-x-1).replace(bstart, Bxm1)#.simplify()\n",
+    "Bx1 = (l_inv.subs(x,rl)*rl).simplify()\n",
+    "Bx0 = ((1 + W.subs(x,0)+ W.subs(x,1) - W.subs(x,1)**2/Bx1)).simplify()\n",
+    "Bxm1 =  ((1 + W.subs(x,-1)+ W.subs(x,0) - W.subs(x,0)**2/Bx0)).simplify()\n",
+    "B_bwd_steps = Bsteps.replace(k,-x-1).replace(bstart, Bxm1).simplify()\n",
     "\n",
     "B = sp.Piecewise(\n",
     "    (Bx1, x > 0),\n",
@@ -224,15 +224,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 6,
    "id": "376e999e-67fe-4340-9591-95a139a4c1d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "B_star_xm2 = (l_inv.subs(x,rl)*rl)#.simplify()\n",
-    "B_star_xm1 =  ((1 + W.subs(x,-1)+ W.subs(x,0) - W.subs(x,-1)**2/B_star_xm2))#.simplify()\n",
-    "B_star_x0 =( (1 + W.subs(x,0)+ W.subs(x,1) - W.subs(x,0)**2/B_star_xm1))#.simplify()\n",
-    "B_star_fwd_steps = Bsteps.replace(k,x).replace(bstart, B_star_x0)#.simplify()\n",
+    "B_star_xm2 = (l_inv.subs(x,rl)*rl).simplify()\n",
+    "B_star_xm1 =  ((1 + W.subs(x,-1)+ W.subs(x,0) - W.subs(x,-1)**2/B_star_xm2)).simplify()\n",
+    "B_star_x0 =( (1 + W.subs(x,0)+ W.subs(x,1) - W.subs(x,0)**2/B_star_xm1)).simplify()\n",
+    "B_star_fwd_steps = Bsteps.replace(k,x).replace(bstart, B_star_x0).simplify()\n",
     "\n",
     "B_star = sp.Piecewise(\n",
     "    (B_star_xm2, x < -1),\n",
@@ -251,13 +251,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 34,
    "id": "86fe31e1-b304-4cd7-8181-f2cb95376b29",
    "metadata": {},
    "outputs": [],
    "source": [
     "asqr = 1/(B- W*W/(B_star.replace(x,x-1)))\n",
-    "\n",
     "dt = sp.log((2*sp.sqrt(asqr.replace(x,x-1)*asqr)*W)/(-1 + sp.sqrt(4*asqr.replace(x,x-1)*asqr*W*W+1)))"
    ]
   },
@@ -271,19 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
-   "id": "78343f1b-c1f1-42ca-a0da-4d4aa0806c4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sage_dt = dt.subs(x,0)\n",
-    "sage_dt = sage_dt._sage_()\n",
-    "simplified_sage = sage_dt.simplify_full().canonicalize_radical().simplify_log()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 36,
    "id": "b9cf5994-7014-405f-9e00-4b1dbf0738c3",
    "metadata": {},
    "outputs": [
@@ -296,20 +283,83 @@
        "log(l*(rl - 1)/mu + 1)"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dt_simplified = simplified_sage._sympy_()\n",
-    "dt_simplified = sp.exp(dt_simplified.subs({'rl':rl,'rmu':rmu}))\n",
-    "dt_simplified = dt_simplified.subs(rmu, r_fun.subs(x,mu))._sage_().canonicalize_radical().simplify()._sympy_()\n",
+    "dt_simplified = dt.subs(x,0)._sage_().simplify_full().canonicalize_radical().simplify_log()._sympy_() #use SAGE to simplify expressions\n",
+    "dt_simplified = sp.exp(dt_simplified.subs({'rl':rl,'rmu':rmu})) #replace some variables in simpy\n",
+    "dt_simplified = dt_simplified.subs(rmu, r_fun.subs(x,mu))._sage_().canonicalize_radical().simplify()._sympy_() #use SAGE to simplify expressions\n",
     "dt_simplified = (dt_simplified-1).simplify()+1\n",
     "dt_simplified = sp.log(dt_simplified).subs('rl',rl)\n",
     "#finally, using that rl = l*(rl-1)^2\n",
     "dt_simplified = dt_simplified.subs(rl/(rl-1),l*(rl-1))\n",
     "dt_simplified"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5ae27ec-35ad-4325-ba6d-7b4ff428e570",
+   "metadata": {},
+   "source": [
+    "# Asymptotics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "id": "b21bfd76-6a7c-46c1-8dca-b9ea276d85aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{\\log{\\left(\\frac{rl \\left(rl rmu^{2} + rl - 2 rmu\\right)}{- rl^{4} rl^{- 2 x} rmu + rl^{3} rl^{- 2 x} rmu^{2} + rl^{3} rl^{- 2 x} + rl^{2} rmu^{2} + rl^{2} - rl^{2} rl^{- 2 x} rmu - 2 rl rmu} \\right)}}{2}$"
+      ],
+      "text/plain": [
+       "log(rl*(rl*rmu**2 + rl - 2*rmu)/(-rl**4*rmu/rl**(2*x) + rl**3*rmu**2/rl**(2*x) + rl**3/rl**(2*x) + rl**2*rmu**2 + rl**2 - rl**2*rmu/rl**(2*x) - 2*rl*rmu))/2"
+      ]
+     },
+     "execution_count": 293,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y= sp.var('y',positive = True)\n",
+    "dt_asympt = dt.subs(x,y+1).subs(y,x-1)#simplifying piecewise function to x>1\n",
+    "dt_asympt = sp.exp( dt_asympt - sp.log(rl)) #compute difference with limit log(rl)\n",
+    "dt_asympt = dt_asympt._sage_().canonicalize_radical().simplify_full()._sympy_().subs('rl',rl) #use SAGE to simplify square root terms\n",
+    "dt_asympt = (dt_asympt) ** 2#remove square root (will require division 1/2 outside log-term later to compensate)\n",
+    "\n",
+    "\n",
+    "#simplify numerator and denominator for asymptotic behavior\n",
+    "numer = sp.numer(dt_asympt).expand().subs({'rl':rl, 'x':x})\n",
+    "numer = sum([term for term in numer.as_ordered_terms() if term.has(x)]) #collect only non constant terms\n",
+    "numer = (numer/rl**(2*x)).simplify() #divide numerator and denominator\n",
+    "\n",
+    "denom = sp.denom(dt_asympt).expand().subs({'rl':rl, 'x':x})\n",
+    "denom = (denom/rl**(2*x)).expand()\n",
+    "\n",
+    "denom_x = sum([term for term in denom.as_ordered_terms() if term.has(x)]) #collect only non constant terms\n",
+    "denom_ct = sum([term for term in denom.as_ordered_terms() if not term.has(x)]) #collect only non constant terms\n",
+    "denom = denom_x.factor(rl^x) + 1*(denom_ct)\n",
+    "                             \n",
+    "dt_asympt = sp.log(numer/denom.expand())/2 #has to divide outside log to compensate the square-root removal\n",
+    "\n",
+    "dt_asympt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9b80285-5fe0-4ff7-9621-35451a26beb1",
+   "metadata": {},
+   "source": [
+    "Then dt_asympt indicates the behavior \n",
+    "\n",
+    "$ \\underset{x\\rightarrow-\\infty}{\\lim}|\\Delta t(x)-\\log(r(\\lambda))| \\sim \\frac{1}{2}\\log\\left( 1 + c\\,r(\\lambda)^{-2|x-x_0|} \\right)\\,,$"
    ]
   }
  ],
